Gap fix

--- a/lost-in-the-scroll/styles/animations.css
+++ b/lost-in-the-scroll/styles/animations.css
@@ -14,3 +14,17 @@
         opacity: 0;
         transform: translateY(-100px);
        }
+
+/* ============================================================
+       SECTION 1
+       ============================================================ */
+
+         .bar-Back {
+          opacity: 0;
+         }
+            .bar-Mid {
+            opacity: 0;
+            }
+               .bar-Front {
+                opacity: 0;
+               }
